--- a/app/styles/partials/_mobile.scss
+++ b/app/styles/partials/_mobile.scss
@@ -63,27 +63,6 @@ footer {
     }
   }
 }
-
-hr {
-  margin:0;
-  padding:0;
-  &.green {
-    width: 100%;
-    border: 1px dotted $main-color;
-  }
-  &.event-horizen {
-    margin-top: 30px;
-    width: 842px;
-    clear: both;
-    margin-left: auto;
-    margin-right: auto;
-    border: 2px dotted $main-color;
-    border-left: none;
-    border-right: none;
-    padding-bottom:7px;
-  }
-}
-
 .mainvisual {
   width: 100%;
   height: 430px;
@@ -135,20 +114,20 @@ hr {
   height: 63px;
   background: image-url("common/back-gray-777.png");
   .title {
-    width: 378px;
+    width: 270px;
     margin-left: auto;
     margin-right: auto;
     img {
-      width: 142px;
+      width: 100px;
       float: left;
-      padding-top: 18px;
+      padding-top: 21px;
     }
     h2 {
       color: white;
       float: left;
-      padding-top: 18px;
-      padding-left: 22px;
-      font-size: 26px;
+      padding-top: 20px;
+      padding-left: 15px;
+      font-size: 20px;
     }
   }
 }
@@ -160,19 +139,25 @@ hr {
   background: image-url("common/back-gray-DDD.png");
   position: relative;
   .beat {
-    position: absolute;
-    top: 50px;
-    left: 50%;
-    margin-left: -600px;
-    width: 1199px;
-    height: 45px;
-    background: image-url("desktop/h3-beat-all.png") repeat-x;
+    position: relative;
+    top:40px;
+    width:100%;
+    height:53px;
+    background: image-url("mobile/h3-beat.png") repeat-x;
+    background-size: 330px 100%;
+    background-position: center center;
+    h3 {
+      text-align: center;
+      color:#444444;
+      font-size: 32px;
+      line-height: 30px;
+    }
   }
   .feature-box {
-    width: 280px;
-    margin-top: 40px;
-    margin-left: 45px;
-    float: left;
+    width: 100%;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
     h3 {
       font-size: 30px;
       font-weight: bold;
@@ -185,6 +170,9 @@ hr {
       height: 100px;
     }
     p {
+      width: 90%;
+      margin-left: auto;
+      margin-right: auto;
       font-color: 15px;
       color: #535353;
       line-height: 1.4em;
@@ -204,50 +192,58 @@ hr {
   height: 63px;
   background: image-url("common/back-green-main.png");
   .title {
-    width: 398px;
+    width: 280px;
     margin-left: auto;
     margin-right: auto;
     img {
-      width: 142px;
+      width: 100px;
       float: left;
-      padding-top: 18px;
+      padding-top: 21px;
     }
     h2 {
       color: white;
       float: left;
-      padding-top: 18px;
-      padding-left: 22px;
-      font-size: 26px;
+      padding-top: 21px;
+      padding-left: 15px;
+      font-size: 18px;
     }
   }
 }
 .howto-contents {
   width: 100%;
-  height: 500px;
+  height: auto;
+  padding-bottom: 40px;
   background: image-url("common/back-green-sub.png");
   position: relative;
   .howto-box {
-    width: 280px;
-    margin-top: 40px;
-    margin-left: 45px;
-    float: left;
-    h3 {
-      width: 311px;
-      height: 25px;
-      font-size: 26px;
-      font-weight: bold;
-      color: $main-color;
-      text-align: center;
-      margin-left: -18px;
-      line-height: 0.1em;
-      background: image-url("desktop/h3-arrow-short.png") no-repeat;
-
+    width: 100%;
+    padding-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    .arrow {
+      width:300px;
+      margin-left: auto;
+      margin-right: auto;
+      height:33px;
+      background: image-url("mobile/h3-arrow.png") no-repeat;
+      background-size: 300px;
+      background-position: center 5px;
+      h3 {
+        font-size: 26px;
+        font-weight: bold;
+        line-height: 0px;
+        color: $main-color;
+        text-align: center;
+      }
     }
     img {
-      margin-top: 18px;
+      margin-top: -20px;
       height: 100px;
     }
     p {
+      width: 90%;
+      margin-left: auto;
+      margin-right: auto;
       font-color: 15px;
       color: #535353;
       line-height: 1.4em;
@@ -264,36 +260,50 @@ hr {
 }
 .mainvisual2 {
   width: 100%;
+  height: 430px;
   margin-left: auto;
   margin-right: auto;
-  background: image-url("desktop/mainvisual2.png") no-repeat;
+  background: image-url("mobile/mainvisual.png") no-repeat;
+  background-size: 1000px;
+  background-position: 52% center;
   .catch-area {
+    padding-top: 50px;
     width:90%;
-    position: relative;
-    top: 0px;
-    left: 0px;
-    img.logo {
-      width: 230px;
-      margin-left: 65px;
+    margin-left: auto;
+    margin-right: auto;
+    h1 {
+      text-align: center;
+      img.logo {
+        width: 150px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      p {
+        margin-top: 10px;
+        font-size: 15px;
+        color: #777777;
+      }
     }
-    p {
-      margin-top: 20px;
-      font-size: 23px;
-      color: #777777
-    }
-    button {
-      width: 135px;
-      height: 51px;
-      margin-top: 280px;
-      margin-left:10px;
-      background: image-url("common/btn-create-event.png") no-repeat;
-      background-size: 335px;
-      color: white;
-      padding-left: 60px;
-      font-size: 18px;
-      cursor: pointer;
-      &:hover {
-        opacity: 0.7;
+    h2 {
+      text-align: center;
+      img {
+        width: 80px;
+        margin-top: 15px;
+      }
+      button {
+        width: 280px;
+        height: 67px;
+        margin-top: 20px;
+        background: image-url("mobile/btn-create-event.png")no-repeat;
+        background-size: 280px 67px;
+        color: white;
+        padding-left: 60px;
+        padding-top: -40px;
+        font-size: 18px;
+        cursor: pointer;
+        &:hover {
+          opacity: 0.7;
+        }
       }
     }
   }
