--- a/app/views/desktop/create-event.html
+++ b/app/views/desktop/create-event.html
@@ -6,11 +6,15 @@
     </h1>
     <div class="create-book" ui-view=""></div>
 
-
     <select-time selection-target="possibilities" allow-empty="true">
     </select-time>
 
-    <input class="create-event" type="image" src="images/desktop/btn-create-event-long.png" fast-click="saveEvent()">
+    <input
+      class="create-event"
+      type="image"
+      src="images/desktop/btn-create-event-long.png"
+      fast-click="saveEvent()"
+    >
 
   </div>
 </div>
