--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,6 +6,7 @@
 @import "partials/create-event";
 @import "partials/calendar";
 @import "partials/time-selection";
+@import "partials/modal";
 
 @import "partials/mobile";
 @import "partials/desktop";
