--- a/app/views/desktop/events.html
+++ b/app/views/desktop/events.html
@@ -2,7 +2,7 @@
   <div class="content white">
 
     <h1 class="events">
-      MeetUpアルファ版リリース打ち上げ！
+      {{event.title}}
     </h1>
     <div class="events-info" ng-include src='"partials/" + device + "/events/general.html"'></div>
 
