--- a/app/views/desktop/create-event.html
+++ b/app/views/desktop/create-event.html
@@ -1,5 +1,6 @@
 <div class="page">
   <div class="content white">
+    <span ng-click="foo()">foo</span>
 
     <h1 class="create-event">
       イベントを作成する
