--- a/app/partials/desktop/create-event/success-modal.html
+++ b/app/partials/desktop/create-event/success-modal.html
@@ -1,4 +1,5 @@
 <h1>Sucess</h1>
+
 <div>{{event.title}}</div>
 <div>{{event.duration}}</div>
 <div>{{event.description}}</div>
@@ -6,4 +7,5 @@
   {{ dateInfo.date | date:'MM/d（EEE曜）' }}
 </span>
 
-
+<a href="javascript:void(0)" ng-click="close()">Close</a>
+<a href="javascript:void(0)" ng-click="close(); gotoEdit()">Edit</a>
