--- a/app/views/desktop/create-event.html
+++ b/app/views/desktop/create-event.html
@@ -10,7 +10,10 @@
     <select-time selection-target="possibilities" allow-empty="true">
     </select-time>
 
-    <input class="create-event" type="image" src="images/desktop/btn-create-event-long.png" fast-click="saveEvent()">
+    <div class="btn-create-event">
+      <input class="create-event" type="image" name="おくる" src="images/desktop/btn-create-event-long.png" fast-click="saveEvent()">
+      <p>イベントを作成する</p>
+    </div>
 
   </div>
 </div>
