--- a/app/views/mobile/main.html
+++ b/app/views/mobile/main.html
@@ -71,8 +71,8 @@
       </div>
       <p class="center"><img src="images/common/icon-howto3.png" alt="日時を決定！"></p>
       <p>みんなの予定を見ながら、開催日時を決定します。開催する日時をタップし、「予定を決定」ボタンを押します。</p>
-      <p>これだけです。</p>
-      <p><b>もっと作業をしたかったですか？</b><br /><b>ごめんなさい！</b></p>
+      <p class="center">これだけです。</p>
+      <p class="center"><b>もっと作業をしたかったですか？</b><br /><b>ごめんなさい！</b></p>
     </div>
   </div>
 </div>
@@ -85,7 +85,8 @@
     </h1>
     <h2>
       <img src="images/mobile/iphone.png" alt="MeetUp">
-      <button href="#/events" fast-link>イベントを作成する</button>
+      <div class="clear"></div>
+      <button href="#/create-event" fast-link>イベントを作成する</button>
     </h2>
   </div>
 </div>
