--- a/app/styles/partials/_calendar.scss
+++ b/app/styles/partials/_calendar.scss
@@ -16,10 +16,8 @@
 }
 
 .current-month {
-  text-align: center;
   position: relative;
-  top:12px;
-  left: 80px;
+  top: 12px;
   font-size: 22px;
 }
 
@@ -51,18 +49,25 @@
 }
 
 .calendar-toolbar {
+  width: 100%;
   height: 50px;
+  text-align: center;
 }
 
 .calendar {
-  width: 347px;
+  width: 90%;
+  @media only screen and (min-width: 760px) {
+    width: 350px;
+  }
+  margin-left: auto;
+  margin-right: auto;
   margin-top:5px;
   background: image-url("common/back-green-main.png");
   color: white;
   font-size:25px;
   overflow: hidden;
   table {
-    width: 344px;
+    width: 99.5%;
     float: left;
     margin-left: 1px;
     background: image-url("common/back-green-sub.png");
