--- a/app/styles/partials/_desktop.scss
+++ b/app/styles/partials/_desktop.scss
@@ -346,13 +346,24 @@ hr {
   vertical-align: top;
   color: #777777;
 }
-input.create-event {
-  width: 749px;
-  height: 51px;
-  margin-top:0px;
-  margin-left: 130px;
-  font-size: 18px;
-  cursor: pointer;
+
+.btn-create-event {
+  margin-top: 30px;
+  input.create-event {
+    width: 749px;
+    height: 51px;
+    margin-left: 130px;
+    font-size: 18px;
+    cursor: pointer;
+  }
+  p {
+    clear: both;
+    color: white;
+    text-align: center;
+    margin-top: -34px;
+    margin-left: 10px;
+    cursor: pointer;
+  }
   &:hover {
     opacity: 0.7;
   }
@@ -378,19 +389,27 @@ input.create-event {
       width: 35px;
       height: 27px;
       background: image-url("desktop/overnavi-left.png") no-repeat;
+      &:hover {
+        background: image-url("desktop/overnavi-left-hover.png") no-repeat;
+      }
       &.disabled {
         background: image-url("desktop/overnavi-left-die.png") no-repeat;
+        cursor: default;
       }
     }
     .overnavi-right {
       position: absolute;
       top: -25px;
-      right: 70px;
+      right: 71px;
       width: 35px;
       height: 27px;
       background: image-url("desktop/overnavi-right.png") no-repeat;
+      &:hover {
+        background: image-url("desktop/overnavi-right-hover.png") no-repeat;
+      }
       &.disabled {
         background: image-url("desktop/overnavi-right-die.png") no-repeat;
+        cursor: default;
       }
     }
   }
@@ -806,14 +825,6 @@ input.create-event {
       }
     }
   }
-}
-
-.clear {
-  clear: both;
-}
-
-.hidden {
-  display: none;
 }
 
 }
