--- a/app/styles/partials/_mobile.scss
+++ b/app/styles/partials/_mobile.scss
@@ -13,23 +13,23 @@ button {
   }
   h1 {
     font-weight: bold;
-    color: #444444;
-    width: 909px;
-    height: 93px;
-    position: relative;
-    top: 50px;
-    left: 50%;
-    margin-left: -455px;
+    color: $main-color;
+    width: 250px;
+    height: 70px;
+    margin-left: auto;
+    margin-right: auto;
     &.create-event {
-      font-size: 30px;
-      padding-top:10px;
-      padding-left: 65px;
-      background: image-url("desktop/h1-create.png") no-repeat;
+      font-size: 20px;
+      padding-top: 30px;
+      padding-left: 70px;
+      background: image-url("mobile/h1-create.png") no-repeat;
+      background-size: 290px;
+      background-position: center center;
     }
     &.events {
       font-size:23px;
       padding-left: 45px;
-      background: image-url("desktop/h1-event-title.png") no-repeat;
+      background: image-url("mobile/h1-event-title.png") no-repeat;
     }
   }
 }
@@ -43,6 +43,43 @@ header {
     margin-left: 13px;
     img {
       width: 128px;
+    }
+  }
+  .create-mode {
+    position: fixed;
+    top:0px;
+    z-index: 2;
+    a {
+      text-decoration: none;
+      color: white;
+    }
+    .logo {
+      position: absolute;
+      top: 1px;
+      left: 50%;
+      margin-left: -69px;
+    }
+    .back-link {
+      float: left;
+      padding-top: 14px;
+      padding-left: 15px;
+      img {
+        width: 14px;
+      }
+    }
+    .next-link {
+      float: right;
+      width: 110px;
+      height: 40px;
+      margin-top: 10px;
+      margin-right: -59px;
+      padding-top: 7px;
+      padding-left: 14px;
+      background: image-url("mobile/btn-green.png") no-repeat;
+      background-size: 60px;
+      p {
+        font-size: 16px;
+      }
     }
   }
 }
@@ -221,13 +258,14 @@ footer {
     margin-left: auto;
     margin-right: auto;
     .arrow {
-      width:300px;
+      min-width: 300px;
+      width: 80%;
       margin-left: auto;
       margin-right: auto;
       height:33px;
       background: image-url("mobile/h3-arrow.png") no-repeat;
-      background-size: 300px;
-      background-position: center 5px;
+      background-size: 100%;
+      background-position: center 10%;
       h3 {
         font-size: 26px;
         font-weight: bold;
@@ -310,58 +348,77 @@ footer {
 }
 
 .create-book {
-  width: 923px;
-  height: 360px;
-  margin-top: 15px;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
-  background: image-url("desktop/book-create-event.png") no-repeat;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background: white;
+  border: 4px solid $main-color;
   small {
     color: red;
     padding-right: 6px;
   }
 }
-.book-left {
-  float: left;
-  margin-top: 56px;
-  margin-left: 35px;
+.create-basic {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
   line-height: 3.1em;
   tr {
     th {
-      text-align: right;
-      vertical-align: top;
+      width: 80px;
+      text-align: left;
+      vertical-align: middle;
       color: #777777;
+      font-size: 12px;
+      line-height: 1.3em;
     }
     td {
       text-align: left;
-      padding-left: 30px;
+      padding-left: 15px;
       input {
-        width: 200px;
+        width: 95%;
         height: 25px;
       }
       textarea {
-        max-width: 200px;
-        max-height: 128px;
+        width: 95%;
         margin-bottom: -20px;
         resize:none;
       }
     }
   }
 }
-.book-right {
-  float: right;
-  margin-top: 40px;
-  margin-right: 68px;
-  vertical-align: top;
-  color: #777777;
+
+.calendar-area {
+  margin-top: 20px;
+  h2 {
+    color: #777777;
+    text-align: center;
+    small {
+      color: red;
+    }
+  }
 }
-input.create-event {
-  width: 749px;
-  height: 51px;
-  margin-top:0px;
-  margin-left: 130px;
-  font-size: 18px;
-  cursor: pointer;
+
+.btn-create-event {
+  width: 280px;
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  input.create-event {
+    width: 100%;
+    cursor: pointer;
+  }
+  p {
+    clear: both;
+    color: white;
+    text-align: center;
+    margin-top: -46px;
+    margin-left: 50px;
+    cursor: pointer;
+    font-size: 20px;
+  }
   &:hover {
     opacity: 0.7;
   }
@@ -817,52 +874,5 @@ input.create-event {
   }
 }
 
-.clear {
-  clear: both;
 }
 
-.hidden {
-  display: none;
-}
-
-}
-
-/*
-header {
-  width: 100%;
-  height: $header-height;
-  background: image-url("common/header.png") repeat-x;
-  position: fixed;
-  top: 0px;
-  z-index: 2;
-
-  #title-bar {
-    margin: auto;
-  }
-
-  #header-logo {
-    float: left;
-    margin-top:8px;
-    margin-left:6px;
-    img {
-      width:120px;
-      height: 100%;
-    }
-  }
-
-  #header-icon {
-    float: right;
-    margin-top:8px;
-    margin-right:10px;
-    img {
-      width:27px;
-      height: 100%;
-    }
-  }
-}
-
-.container {
-  margin: auto;
-  margin-top: $header-height;
-}
-*/
