--- a/app/styles/partials/_time-selection.scss
+++ b/app/styles/partials/_time-selection.scss
@@ -13,6 +13,12 @@
         padding-bottom: 10px;
       }
     }
+    &.even-time-true {
+      background: #FFF4E1;
+    }
+    &.even-time-false {
+      background: #D5EEDA;
+    }
     td {
       text-align: center;
       color: $main-color;
@@ -20,10 +26,9 @@
       &.cell {
         width: 10%;
         height: 20px;
-        cursor: image-url("common/cursor/pointer-pen.png") no-repeat;
+        cursor: image-url("common/pointer-pen.png") no-repeat;
         &.time-label {
           width: 1%;
-          max-width: 1%;
           padding-left: 20px;
           padding-right: 10px;
           text-align: right;
@@ -31,12 +36,6 @@
           color: #535353;
           cursor: default;
         }
-          &.even-time-true {
-            background: #FFF4E1;
-          }
-          &.even-time-false {
-            background: #D5EEDA;
-          }
       }
     }
   }
