Fix bug when creating timeContainer.

--- a/app/partials/desktop/events/general.html
+++ b/app/partials/desktop/events/general.html
@@ -57,18 +57,20 @@
 <hr class="event-horizen">
 <div class="heatmap-area">
   <h2>みんなの予定</h2>
-  <div class="overnavi">
+<!--   <div class="overnavi">
     <div class="overnavi-left"></div>
     <div class="overnavi-right"></div>
   </div>
   <div class="heatmap">
     <img src="images/sample-heatmap.png">
-  </div>
+  </div> -->
+  <select-time selection-target="availabilities">
+  </select-time>
   <p class="help-mydates">* 橙色の枠部分は自分が参加できる日時です。</p>
   <p class="help-select">* 色のついたボックスを選択すると、その日時に参加できる人が表示されます。</p>
 </div>
 <hr class="event-horizen">
-<div class="area-selected">
+<!-- <div class="area-selected">
   <div class="area-selected-info">
     <ul>
       <li>Daniel Perez</li>
@@ -82,7 +84,7 @@
     </div>
   </div>
   <div class="area-selected-close"></div>
-</div>
+</div> -->
 <div class="organizer-area">
   <h2>主催者の方へ</h2>
   <div class="share-box-left">
