--- a/app/styles/partials/_time-selection.scss
+++ b/app/styles/partials/_time-selection.scss
@@ -37,9 +37,25 @@
           &.even-time-false {
             background: #D5EEDA;
           }
+
       }
     }
   }
+
+  &.availabilities {
+    td {
+      &.selected-false {
+        background: #cdcdcd;
+      }
+      &.opened {
+        background: #dcdddd;
+      }
+      &.selected-true {
+        background: $selected-cell-color;
+      }
+    }
+  }
+
   /* オリジナルスクロールバー
   ::-webkit-scrollbar {
       width: 12px;
