--- a/app/styles/partials/_calendar.scss
+++ b/app/styles/partials/_calendar.scss
@@ -23,12 +23,14 @@
 
 .previous {
   width: 16px;
-  height: 23px;
+  height: 25px;
   float: left;
   margin-top: 15px;
   margin-left: 15px;
   margin-bottom: 30px;
   background: image-url("common/cal-arrow-left.png") no-repeat;
+  background-size: 16px;
+  background-position: top left;
   cursor: pointer;
   &:hover {
     opacity: 0.7;
@@ -36,12 +38,14 @@
 }
 .next {
   width: 16px;
-  height: 23px;
+  height: 25px;
   float: right;
   margin-top: 15px;
   margin-right: 15px;
   margin-bottom: 30px;
   background: image-url("common/cal-arrow-right.png") no-repeat;
+  background-size: 16px;
+  background-position: top right;
   cursor: pointer;
   &:hover {
     opacity: 0.7;
