--- a/app/styles/partials/_create-event.scss
+++ b/app/styles/partials/_create-event.scss
@@ -102,3 +102,12 @@
   right:10px;
   width:25px;
 }
+
+.gide-arrow {
+  width: 46px;
+  height: 79px;
+  margin-top: 20px;
+  background: image-url("common/gide-arrow.png") no-repeat;
+  margin-left: auto;
+  margin-right: auto;
+}
