--- a/app/styles/partials/_global.scss
+++ b/app/styles/partials/_global.scss
@@ -25,6 +25,11 @@ hr {
     border-right: none;
     padding-bottom:7px;
   }
+  &.create-event {
+    margin-top: 20px;
+    width: 100%;
+    border-top: 1px dotted $main-color;
+  }
 }
 
 .clear {
